@@ -4,50 +4,46 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
 import static org.jenkinsci.plugins.gitclient.verifier.KnownHostsTestUtil.nonGitHubHost;
 import static org.jenkinsci.plugins.gitclient.verifier.KnownHostsTestUtil.runKnownHostsTests;
+import static org.junit.jupiter.api.Assumptions.assumeTrue;
 
 import hudson.model.StreamBuildListener;
 import hudson.model.TaskListener;
 import java.io.File;
-import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.Duration;
 import java.util.Collections;
 import org.awaitility.Awaitility;
-import org.junit.Assume;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.TemporaryFolder;
-import org.junit.runner.RunWith;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.api.io.TempDir;
+import org.mockito.junit.jupiter.MockitoExtension;
 
-@RunWith(MockitoJUnitRunner.class)
-public class ManuallyProvidedKeyVerifierTest {
+@ExtendWith(MockitoExtension.class)
+class ManuallyProvidedKeyVerifierTest {
 
     // Create a temporary folder and assert folder deletion at end of tests
-    @Rule
-    public TemporaryFolder testFolder =
-            TemporaryFolder.builder().assureDeletion().build();
+    @TempDir
+    private File testFolder;
 
     private String hostKey;
 
-    @Before
-    public void assignVerifier() { // For github.com
+    @BeforeEach
+    void assignVerifier() { // For github.com
         hostKey =
                 "|1|7qEjynZk0IodegnbgoPEhWtdgA8=|bGs7a1ktbGWwPuZqqTbAazUAULM= ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBEmKSENjQEezOmxkZMy7opKgwFB9nkt5YRrYMjNuG5N87uRgg6CLrbo5wAdT/y6v0mKV0U2w0WZ2YB/++Tpockg=";
     }
 
     @Test
-    public void connectWhenHostKeyProvidedForOtherHostNameThenShouldFail() throws Exception {
-        Assume.assumeTrue(runKnownHostsTests());
+    void connectWhenHostKeyProvidedForOtherHostNameThenShouldFail() throws Exception {
+        assumeTrue(runKnownHostsTests());
         HostKeyVerifierFactory verifier = new ManuallyProvidedKeyVerifier(hostKey);
 
         KnownHostsTestUtil.connectToHost(
                         nonGitHubHost(),
                         22,
-                        new File(testFolder.getRoot() + "/path/to/file/random"),
+                        new File(testFolder + "/path/to/file/random"),
                         verifier.forJGit(StreamBuildListener.fromStdout()),
                         "ecdsa-sha2-nistp256",
                         s -> {
@@ -60,14 +56,14 @@ public class ManuallyProvidedKeyVerifierTest {
     }
 
     @Test
-    public void connectWhenHostKeyProvidedThenShouldNotFail() throws Exception {
-        Assume.assumeTrue(runKnownHostsTests());
+    void connectWhenHostKeyProvidedThenShouldNotFail() throws Exception {
+        assumeTrue(runKnownHostsTests());
         ManuallyProvidedKeyVerifier verifier = new ManuallyProvidedKeyVerifier(hostKey);
         ManuallyProvidedKeyVerifier.ManuallyProvidedKeyJGitHostKeyVerifier jGitHostKeyVerifier =
                 (ManuallyProvidedKeyVerifier.ManuallyProvidedKeyJGitHostKeyVerifier)
                         verifier.forJGit(StreamBuildListener.fromStdout());
         Path tempKnownHosts = Files.createTempFile("known_hosts", "");
-        Files.write(tempKnownHosts, (hostKey + System.lineSeparator()).getBytes(StandardCharsets.UTF_8));
+        Files.writeString(tempKnownHosts, hostKey + System.lineSeparator());
         KnownHostsTestUtil.connectToHost(
                         "github.com", 22, tempKnownHosts.toFile(), jGitHostKeyVerifier, "ecdsa-sha2-nistp256", s -> {
                             assertThat(s.isOpen(), is(true));
@@ -80,8 +76,8 @@ public class ManuallyProvidedKeyVerifierTest {
     }
 
     @Test
-    public void connectWhenWrongHostKeyProvidedThenShouldFail() throws Exception {
-        Assume.assumeTrue(runKnownHostsTests());
+    void connectWhenWrongHostKeyProvidedThenShouldFail() throws Exception {
+        assumeTrue(runKnownHostsTests());
         String key = "github.com ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIOMqqnkVzrm0SdG6UOoqKLsabgH5C9okWi0dh2l9OOOO";
         HostKeyVerifierFactory verifier = new ManuallyProvidedKeyVerifier(key);
 
@@ -89,7 +85,7 @@ public class ManuallyProvidedKeyVerifierTest {
                 (ManuallyProvidedKeyVerifier.ManuallyProvidedKeyJGitHostKeyVerifier)
                         verifier.forJGit(StreamBuildListener.fromStdout());
         Path tempKnownHosts = Files.createTempFile("known_hosts", "");
-        Files.write(tempKnownHosts, (key + System.lineSeparator()).getBytes(StandardCharsets.UTF_8));
+        Files.writeString(tempKnownHosts, key + System.lineSeparator());
         KnownHostsTestUtil.connectToHost(
                         "github.com", 22, tempKnownHosts.toFile(), jGitHostKeyVerifier, "ssh-ed25519", s -> {
                             assertThat(s.isOpen(), is(true));
@@ -101,8 +97,8 @@ public class ManuallyProvidedKeyVerifierTest {
     }
 
     @Test
-    public void connectWhenHostKeyProvidedWithPortThenShouldNotFail() throws Exception {
-        Assume.assumeTrue(runKnownHostsTests());
+    void connectWhenHostKeyProvidedWithPortThenShouldNotFail() throws Exception {
+        assumeTrue(runKnownHostsTests());
         String key =
                 "github.com:22 ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBEmKSENjQEezOmxkZMy7opKgwFB9nkt5YRrYMjNuG5N87uRgg6CLrbo5wAdT/y6v0mKV0U2w0WZ2YB/++Tpockg=";
         HostKeyVerifierFactory verifier = new ManuallyProvidedKeyVerifier(key);
@@ -111,7 +107,7 @@ public class ManuallyProvidedKeyVerifierTest {
                 (ManuallyProvidedKeyVerifier.ManuallyProvidedKeyJGitHostKeyVerifier)
                         verifier.forJGit(StreamBuildListener.fromStdout());
         Path tempKnownHosts = Files.createTempFile("known_hosts", "");
-        Files.write(tempKnownHosts, (key + System.lineSeparator()).getBytes(StandardCharsets.UTF_8));
+        Files.writeString(tempKnownHosts, key + System.lineSeparator());
         KnownHostsTestUtil.connectToHost(
                         "github.com", 22, tempKnownHosts.toFile(), jGitHostKeyVerifier, "ecdsa-sha2-nistp256", s -> {
                             assertThat(s.isOpen(), is(true));
@@ -123,11 +119,11 @@ public class ManuallyProvidedKeyVerifierTest {
     }
 
     @Test
-    public void testGetVerifyHostKeyOption() throws IOException {
+    void testGetVerifyHostKeyOption() throws Exception {
         if (isWindows()) {
             return; // Skip test without generating a Maven surefire warning
         }
-        Path tempFile = testFolder.newFile().toPath();
+        Path tempFile = File.createTempFile("junit", null, testFolder).toPath();
         String actual = new ManuallyProvidedKeyVerifier(hostKey)
                 .forCliGit(TaskListener.NULL)
                 .getVerifyHostKeyOption(tempFile);
@@ -139,15 +135,15 @@ public class ManuallyProvidedKeyVerifierTest {
     }
 
     @Test
-    public void testGetVerifyHostKeyOptionOnWindows() throws IOException {
+    void testGetVerifyHostKeyOptionOnWindows() throws Exception {
         if (!isWindows()) {
             return; // Skip test without generating a Maven surefire warning
         }
-        Path tempFile = testFolder.newFile().toPath();
+        Path tempFile = File.createTempFile("junit", null, testFolder).toPath();
         String actual = new ManuallyProvidedKeyVerifier(hostKey)
                 .forCliGit(TaskListener.NULL)
                 .getVerifyHostKeyOption(tempFile);
-        assertThat(actual, is("-o StrictHostKeyChecking=yes  -o UserKnownHostsFile=" + tempFile.toAbsolutePath() + ""));
+        assertThat(actual, is("-o StrictHostKeyChecking=yes  -o UserKnownHostsFile=" + tempFile.toAbsolutePath()));
         assertThat(Files.readAllLines(tempFile), is(Collections.singletonList(hostKey)));
     }
 
